[project]
name = "chemspace-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lukas", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.1"
]

[project.optional-dependencies]
agent = [
    "fast-agent-mcp>=0.2.25",
]

[project.scripts]
chemspace-mcp = "chemspace_mcp:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
